[gd_scene load_steps=8 format=3 uid="uid://c76cjg57qmm18"]

[ext_resource type="Script" path="res://addons/dialogue_manager/example_balloon/crpg_balloon.gd" id="1_u7req"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_8ecxg"]
[ext_resource type="Script" path="res://addons/dialogue_manager/crpg_dialogue_reponses_menu.gd" id="3_k8w1a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikvxs"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.247059, 0.247059, 0.247059, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ludo3"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.0666667, 0.0666667, 0.0666667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")
ResponseLabel/base_type = &"RichTextLabel"
ResponseLabel/styles/focus = SubResource("StyleBoxFlat_ikvxs")
ResponseLabel/styles/normal = SubResource("StyleBoxFlat_ludo3")

[node name="crpg_baloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_u7req")

[node name="Balloon" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -350.0
offset_right = 450.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(450, 175)
size_flags_horizontal = 4
theme = SubResource("Theme_qq3yp")

[node name="MarginContainer" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="Balloon/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="scroll_container" type="ScrollContainer" parent="Balloon/MarginContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="dialogue_container" type="VBoxContainer" parent="Balloon/MarginContainer/MarginContainer2/scroll_container"]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="DialogueLabel" parent="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container" instance=ExtResource("2_8ecxg")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue..."

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("3_k8w1a")

[node name="RichTextLabel" type="RichTextLabel" parent="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container/ResponsesMenu"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/normal_font_size = 18
text = "1. "

[node name="RichTextLabel2" type="RichTextLabel" parent="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container/ResponsesMenu"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/normal_font_size = 18
text = "2. "

[node name="RichTextLabel3" type="RichTextLabel" parent="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container/ResponsesMenu"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/normal_font_size = 18
text = "3. "

[node name="RichTextLabel4" type="RichTextLabel" parent="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container/ResponsesMenu"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/normal_font_size = 18
text = "4. "

[node name="RichTextLabel5" type="RichTextLabel" parent="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container/ResponsesMenu"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
focus_mode = 2
theme_override_font_sizes/normal_font_size = 18
text = "5. "

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="Balloon/MarginContainer/MarginContainer2/scroll_container/dialogue_container/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
